--- a/CRUD & Authentication/WebProject/package.json
+++ b/CRUD & Authentication/WebProject/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "webproject",
-  "version": "0.0.0",
+  "name": "booktrack",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
-    "@types/passport": "^1.0.17",
-    "@types/passport-local": "^1.0.38",
-    "@types/passport-local-mongoose": "^6.1.5",
     "bootstrap": "^5.3.8",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.18.2",
